# rag-chatbot-claude-learning

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  test_results_pre_refactor.md
backend/: ai_generator.py  app.py  rag_system.py  search_tools.py  session_manager.py
backend/tests/: conftest.py  test_ai_generator.py  test_api.py  test_rag_system.py  test_search_tools.py  test_session_concurrency.py
docs/: codebase-overview-notes.md
frontend/: index.html  script.js  style.css
scripts/: check.sh
